# ggwave_flutter

./: README.md  config.yaml  ggwave.yaml  ggwave_bindings.dart  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/wave_send_flutter/: MainActivity.kt
ggwave/: CMakeLists.txt
ggwave/bindings/: CMakeLists.txt
ggwave/examples/: CMakeLists.txt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  dummy.dart  ggwave_bindings.dart  home.dart  home_page.dart  main.dart  send_wave_app.dart  send_wave_local.dart
lib/core/: core.dart  ggwave_audio_player.dart  ggwave_bridge.dart
lib/core/enums/: enums.dart  sample_format.dart  tx_protocol_id.dart
lib/core/extensions/: extensions.dart  helper_extension.dart
lib/core/models/: parameters.dart
lib/core/utils/: ggwave_bridge.dart  ggwave_service.dart  ggwave_sound.dart  utils.dart
libs/: CMakeLists.txt
libs/src/: CMakeLists.txt  ggwave.cpp
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
